--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,21 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/index.html"
-      }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/payment.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/payment",
+      "dest": "api/payment.js"
+    }
+  ]
+}
