--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,19 @@
 {
+  "version": 2,
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
-  "version": 2,
   "builds": [
     {
       "src": "api/payment.js",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/payment",
-      "dest": "api/payment.js"
     }
   ]
 }
