--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
     "stripe": "^17.4.0",
     "yup": "^1.4.0"
   },
